--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ version: '3.3'
 services:
   redis-server:
     # Use Docker Hub base image 'redis' 
-    image: 'gregorycoward/redis:1.0.0'
+    image: 'redis'
   receiver-service:
     restart: on-failure
     image: 'gregorycoward/f5dcs-logreceiver:1.1.0'
@@ -15,9 +15,9 @@ services:
       - '30601:30601'
   publisher-service:
     restart: on-failure
-    image: 'gregorycoward/f5dcs-logpublisher:1.1.1'
+    image: 'gregorycoward/f5dcs-logpublisher:1.1.0'
     environment:
-      - SPLUNK_HOST=xxxxxxxxxxxx
-      - SPLUNK_HEC=txxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-      - DATADOG_TOKEN=xxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+      - SPLUNK_HOST=206.124.129.189
+      - SPLUNK_HEC=ba5dce62-0254-474d-80b5-b25b30198ecb
+      - DATADOG_TOKEN=a1354e93ef308fa95daac9c63628eec6
       - ANALYTIC_PROVIDER=splunk    # - Enter either 'splunk' or 'datadog'
