--- a/pyPublisher/Dockerfile
+++ b/pyPublisher/Dockerfile
@@ -5,7 +5,7 @@ FROM python:3.9
 # LABEL about the custom image
 LABEL maintainer="g.coward@f5.com"
 LABEL version="0.2"
-LABEL description="Custom image for F5DCS logReceiverProxy - formatter"
+LABEL description="Custom image for F5DCS logReceiverProxy - publisher"
 
 
 # Set display port as an environment variable
