--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -1,60 +1,19 @@
 # Redis configuration file example
 
-# Note on units: when memory size is needed, it is possible to specifiy
-# it in the usual form of 1k 5GB 4M and so forth:
-#
-# 1k => 1000 bytes
-# 1kb => 1024 bytes
-# 1m => 1000000 bytes
-# 1mb => 1024*1024 bytes
-# 1g => 1000000000 bytes
-# 1gb => 1024*1024*1024 bytes
-#
-# units are case insensitive so 1GB 1Gb 1gB are all the same.
-
-# By default Redis does not run as a daemon. Use 'yes' if you need it.
-# Note that Redis will write a pid file in /usr/local/var/run/redis.pid when daemonized.
 daemonize no
-
-# When running daemonized, Redis writes a pid file in /usr/local/var/run/redis.pid by
-# default. You can specify a custom pid file location here.
-#pidfile /usr/local/var/run/redis6380.pid
-
-# Accept connections on the specified port, default is 6379.
-# If port 0 is specified Redis will not listen on a TCP socket.
 port 6379
-
-# If you want you can bind a single interface, if the bind option is not
-# specified all the interfaces will listen for incoming connections.
-#
 bind 127.0.0.1
-
-# Specify the path for the unix socket that will be used to listen for
-# incoming connections. There is no default, so Redis will not listen
-# on a unix socket when not specified.
-#
-# unixsocket /tmp/redis.sock
-# unixsocketperm 755
-
-# Close the connection after a client is idle for N seconds (0 to disable)
 timeout 0
-
-# Set server verbosity to 'debug'
-# it can be one of:
-# debug (a lot of information, useful for development/testing)
-# verbose (many rarely useful info, but not a mess like the debug level)
-# notice (moderately verbose, what you want in production probably)
-# warning (only very important / critical messages are logged)
 loglevel warning
 
 # Specify the log file name. Also 'stdout' can be used to force
 # Redis to log on the standard output. Note that if you use standard
 # output for logging but daemonize, logs will be sent to /dev/null
-logfile stdout
+#logfile stdout
 
 # To enable logging to the system logger, just set 'syslog-enabled' to yes,
 # and optionally update the other syslog parameters to suit your needs.
-# syslog-enabled no
+syslog-enabled no
 
 # Specify the syslog identity.
 # syslog-ident redis
@@ -92,7 +51,7 @@ save ""
 rdbcompression yes
 
 # The filename where to dump the DB
-dbfilename dump6380.rdb
+#dbfilename dump6380.rdb
 
 # The working directory.
 #
@@ -102,7 +61,7 @@ dbfilename dump6380.rdb
 # Also the Append Only File will be created inside this directory.
 # 
 # Note that you must specify a directory here, not a file name.
-dir /data/
+#dir /data/
 
 ################################# REPLICATION #################################
 
@@ -283,8 +242,8 @@ appendonly no
 # If unsure, use "everysec".
 
 # appendfsync always
-appendfsync everysec
-# appendfsync no
+# appendfsync everysec
+appendfsync no
 
 # When the AOF fsync policy is set to always or everysec, and a background
 # saving process (a background save or AOF log background rewriting) is
