--- a/deploy.yml
+++ b/deploy.yml
@@ -28,7 +28,7 @@ spec:
     spec:
       containers:
       - name: redis-server
-        image: glcimages.azurecr.io/redis:1.0.0
+        image: glcimages.azurecr.io/f5dcs-redis:1.5
         ports:
         - containerPort: 6379
       - name: rec-service
@@ -49,7 +49,7 @@ spec:
           containerPort: 30601
           protocol: TCP
       - name: format-service
-        image: glcimages.azurecr.io/f5dcs-pyformatter:1.0
+        image: glcimages.azurecr.io/f5dcs-pyformatter:1.5
       - name: pub-service
         image: glcimages.azurecr.io/f5dcs-logpublisher:1.1.9
         env:
