--- a/globalLogReceiver/Dockerfile
+++ b/globalLogReceiver/Dockerfile
@@ -5,7 +5,7 @@ FROM python:3.9
 # LABEL about the custom image
 LABEL maintainer="g.coward@f5.com"
 LABEL version="0.2"
-LABEL description="Custom image for F5DCS logReceiverProxy - s3puller"
+LABEL description="Custom image for F5DCS Global Log Receiver s3puller"
 
 
 # Set display port as an environment variable
@@ -13,11 +13,10 @@ ENV DISPLAY=:99
 
 WORKDIR  /usr/app
 
-RUN pip install redis 
 RUN pip install boto3
 RUN pip install requests
 
 # Copy logPublisher.js script and config file then start logReceiverProxy
-COPY s3puller.py /usr/app/s3puller.py
+COPY s3poller.py /usr/app/s3poller.py
 
-CMD [ "python", "s3puller.py" ]
+CMD [ "python", "s3poller.py" ]
